--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,10 @@
       <li>
         <label>Role</label>
         <select class="picker" for="role">
-          <option value="">null</option>
+          <option value="">....</option>
           <option value="Web Developer">Web Developer</option>
-          <option value="Floor Planner">Floor Planner</option>
-          <option value="Technical Writter">Technical Writter</option>
+          <option value="Floor Planner">informatic ingenier</option>
+          <option value="Technical Writter">drummer</option>
         </select>
       </li>
       <li>
@@ -66,9 +66,9 @@
         <select class="picker" for="city">
           <option value="">null</option>
           <option value="Miami">Miami</option>
-          <option value="Munich">Munich</option>
-          <option value="Caracas">Caracas</option>
-          <option value="Toronto">Toronto</option>
+          <option value="Munich">colombia</option>
+          <option value="Caracas">boyaca</option>
+          <option value="Toronto">tokyo</option>
         </select>
       </li>
       <li>
@@ -78,7 +78,7 @@
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
           <option value="Canada">Canada</option>
-          <option value="Venezuela">Venezuela</option>
+          <option value="Venezuela">colombia</option>
         </select>
       </li>
     </ul>
