--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
         <select class="picker" for="role">
           <option value="">....</option>
           <option value="Web Developer">Web Developer</option>
-          <option value="Floor Planner">informatic ingenier</option>
-          <option value="Technical Writter">drummer</option>
+          <option value="Informatic Ingenier">Informatic Ingenier</option>
+          <option value="Artist">Artist</option>
         </select>
       </li>
       <li>
@@ -66,9 +66,9 @@
         <select class="picker" for="city">
           <option value="">null</option>
           <option value="Miami">Miami</option>
-          <option value="Munich">colombia</option>
-          <option value="Caracas">boyaca</option>
-          <option value="Toronto">tokyo</option>
+          <option value="Boston">Boston</option>
+          <option value="Moniquira">Moniquira</option>
+          <option value="Tokio">Tokyo</option>
         </select>
       </li>
       <li>
@@ -77,8 +77,8 @@
           <option value="">null</option>
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
-          <option value="Canada">Canada</option>
-          <option value="Venezuela">colombia</option>
+          <option value="Alemania">Alemania</option>
+          <option value="Colombia">Colombia</option>
         </select>
       </li>
     </ul>
