--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       <li>
         <label>Role</label>
         <select class="picker" for="role">
-          <option value="">....</option>
+          <option value="">role</option>
           <option value="Web Developer">Web Developer</option>
           <option value="Informatic Ingenier">Informatic Ingenier</option>
           <option value="Artist">Artist</option>
@@ -64,7 +64,7 @@
       <li>
         <label>City</label>
         <select class="picker" for="city">
-          <option value="">null</option>
+          <option value="">City</option>
           <option value="Miami">Miami</option>
           <option value="Boston">Boston</option>
           <option value="Moniquira">Moniquira</option>
@@ -74,7 +74,7 @@
       <li>
         <label>Country</label>
         <select class="picker" for="country">
-          <option value="">null</option>
+          <option value="">country</option>
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
           <option value="Alemania">Alemania</option>
